# docs/swagger.json
@@ -4,37 +4,6 @@
         "contact": {}
     },
     "paths": {
-        "/v1/chain/getBalance": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "查询余额",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "查询地址",
-                        "name": "address",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "查询Token",
-                        "name": "token",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/controller.GetBalanceResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/v1/config/load": {
             "get": {
                 "produces": [
@@ -45,7 +14,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.LoadResponse"
+                            "$ref": "#/definitions/funds_service.LoadResponse"
                         }
                     }
                 }
@@ -67,7 +36,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controller.SetRequest"
+                            "$ref": "#/definitions/funds_service.SetRequest"
                         }
                     }
                 ],
@@ -132,7 +101,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.GetRechargeWalletResponse"
+                            "$ref": "#/definitions/funds_service.GetRechargeWalletResponse"
                         }
                     }
                 }
@@ -154,7 +123,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controller.GetRechargeWalletRequest"
+                            "$ref": "#/definitions/funds_service.GetRechargeWalletRequest"
                         }
                     }
                 ],
@@ -162,7 +131,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.GetRechargeWalletResponse"
+                            "$ref": "#/definitions/funds_service.GetRechargeWalletResponse"
                         }
                     }
                 }
@@ -170,21 +139,7 @@
         }
     },
     "definitions": {
-        "controller.GetBalanceResponse": {
-            "type": "object",
-            "properties": {
-                "balance": {
-                    "type": "string"
-                },
-                "code": {
-                    "type": "integer"
-                },
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "controller.GetRechargeWalletRequest": {
+        "funds_service.GetRechargeWalletRequest": {
             "type": "object",
             "properties": {
                 "amount": {
@@ -207,27 +162,21 @@
                 }
             }
         },
-        "controller.GetRechargeWalletResponse": {
+        "funds_service.GetRechargeWalletResponse": {
             "type": "object",
             "properties": {
                 "address": {
                     "type": "string"
-                },
-                "code": {
-                    "type": "integer"
                 },
                 "expireAt": {
                     "type": "integer"
                 },
                 "id": {
                     "type": "string"
-                },
-                "message": {
-                    "type": "string"
                 }
             }
         },
-        "controller.LoadResponse": {
+        "funds_service.LoadResponse": {
             "type": "object",
             "properties": {
                 "code": {
@@ -256,7 +205,7 @@
                 }
             }
         },
-        "controller.SetRequest": {
+        "funds_service.SetRequest": {
             "type": "object",
             "properties": {
                 "collectThresholds": {
